--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 requests = "*"
 python-dotenv = "*"
 pendulum = "*"
+mysql-connector-python = "*"
 
 [requires]
 python_version = "3.7"
